vision/lbr_fri_ros2_stack_ws_foxy2/log/build_2023-12-06_18-45-34/workspace_controller/stderr.log
  File "/home/pingpongproject/code/ping-pong-robot/lbr_fri_ros2_stack_ws_foxy2/install/workspace_controller/lib/python3.8/site-packages/workspace_controller/ik_controller.py", line 52
    required_time = np.max(np.abs(theta - target_theta)) / self.velocity_limits)   # Required time is determined by the max delta theta / velocity
                                                                               ^
SyntaxError: unmatched ')'

